top 버튼 추가/이미지 경로 수정

--- a/board.html
+++ b/board.html
@@ -67,7 +67,7 @@
             <div class="header_nav" id="header_nav">
                 <div class="inner cf">
                     <h1 class="logo fl">
-                        <a href="index.html"><img src="css/image/logo.png" alt="하남시청"></a>
+                        <a href="index.html"><img src="image/logo.png" alt="하남시청"></a>
                     </h1>
                     <ul class="main_menu fr cf">
                         <li class="main_menu01 fl">
@@ -663,8 +663,8 @@
                     <div class="borad_head cf">
                         <h1 class="notice_title fl"><span>공지사항</span></h1>
                         <div class="btn_wrap fr">
-                            <div class="title_btn fl"><a href="#"><img src="css/image/link.png" alt="외부링크 버튼"></a></div>
-                            <div class="title_btn fl"><a href="#"><img src="css/image/print.png" alt="프린트 버튼"></a></div>
+                            <div class="title_btn fl"><a href="#"><img src="image/link.png" alt="외부링크 버튼"></a></div>
+                            <div class="title_btn fl"><a href="#"><img src="image/print.png" alt="프린트 버튼"></a></div>
                         </div>
                     </div>
                     <div class="borad_info cf">
@@ -699,7 +699,7 @@
                             <input type="checkbox" id="bd_click5283" name="board">
                             <div class="fl">5283</div>
                             <div class="fl board_title left"><label for="bd_click5283">호흡기 진료 지정 의료기관(코로나19 신속항원키트 및 PCR검사 가능)알림</label></div>
-                            <div class="fl"><img src="css/image/ico_xlsx.gif" alt="엑셀파일 첨부 있음"></div>
+                            <div class="fl"><img src="image/ico_xlsx.gif" alt="엑셀파일 첨부 있음"></div>
                             <div class="fl board_style2">보건정책과</div>
                             <div class="fl board_style2">2022.02.19</div>
                             <div class="fl">39</div>
@@ -715,14 +715,14 @@
                             <input type="checkbox" id="bd_click5282" name="board">
                             <div class="fl">5282</div>
                             <div class="fl board_title left"><label for="bd_click5282">사회적 거리두기 강화 조치 조정에 따른 체육시설 방역수칙 안내</label></div>
-                            <div class="fl"><img src="css/image/ico_folder.gif" alt="여러파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_folder.gif" alt="여러파일 첨부있음"></div>
                             <div class="fl board_style2">문화체육과</div>
                             <div class="fl board_style2">2022.02.18</div>
                             <div class="fl">213</div>
                             <div class="board_content_wrap">
                                 <div class="board_content_sub">사회적 거리두기 강화 조치 조정에 따른 체육시설 방역수칙 안내</div>
                                 <div class="board_content">
-                                    <p class="p_centerstyle"><img src="css/image/QRcode_using.jpg" alt="허위 작성, 개인정보 노출 염려 뚝~ 전자 출입명부, 이렇게 사용하세요!"></p>
+                                    <p class="p_centerstyle"><img src="image/QRcode_using.jpg" alt="허위 작성, 개인정보 노출 염려 뚝~ 전자 출입명부, 이렇게 사용하세요!"></p>
                                     <p class="p_style">사회적 거리두기 강화조치 조정방안을 다음과 같이 안내드립니다.</p>
                                     <p>○ 적용기간 : 2022년 2월 19일(토) 0시 ~ 2022년 3월 13일(일) 24시</p>
                                     <p class="p_style">※ 운영시간 제한조치는 2022.3.14.(월) 05시까지 적용</p>
@@ -742,7 +742,7 @@
                             <input type="checkbox" id="bd_click5281" name="board">
                             <div class="fl">5281</div>
                             <div class="fl board_title left"><label for="bd_click5281">소상공인 방역지원금 행정명령 이행 확인서 신청 안내</label></div>
-                            <div class="fl"><img src="css/image/ico_folder.gif" alt="여러파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_folder.gif" alt="여러파일 첨부있음"></div>
                             <div class="fl board_style2">일자리경제과</div>
                             <div class="fl board_style2">2022.02.15</div>
                             <div class="fl">251</div>
@@ -771,7 +771,7 @@
                             <input type="checkbox" id="bd_click5280" name="board">
                             <div class="fl">5280</div>
                             <div class="fl board_title left"><label for="bd_click5280">다중이용시설 실내공기질 자가측정 및 오염도 검사 결과(2021년 4분기)</label></div>
-                            <div class="fl"><img src="css/image/ico_xlsx.gif" alt="엑셀 파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_xlsx.gif" alt="엑셀 파일 첨부있음"></div>
                             <div class="fl board_style2">환경정책과</div>
                             <div class="fl board_style2">2022.02.15</div>
                             <div class="fl">30</div>
@@ -788,7 +788,7 @@
                             <input type="checkbox" id="bd_click5279" name="board">
                             <div class="fl">5279</div>
                             <div class="fl board_title left"><label for="bd_click5279">2022년 제1회 (재)하남문화재단 직원채용 시행계획 공고</label></div>
-                            <div class="fl"><img src="css/image/ico_folder.gif" alt="여러파일 파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_folder.gif" alt="여러파일 파일 첨부있음"></div>
                             <div class="fl board_style2">문화체육과</div>
                             <div class="fl board_style2">2022.02.14</div>
                             <div class="fl">329</div>
@@ -816,7 +816,7 @@
                             <input type="checkbox" id="bd_click5278" name="board">
                             <div class="fl">5278</div>
                             <div class="fl board_title left"><label for="bd_click5278">[코로나19 위기대응 경기도 관광업계 운영지원] 공지</label></div>
-                            <div class="fl"><img src="css/image/ico_hwp.gif" alt="한글 파일 파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_hwp.gif" alt="한글 파일 파일 첨부있음"></div>
                             <div class="fl board_style2">문화체육과</div>
                             <div class="fl board_style2">2022.02.14</div>
                             <div class="fl">60</div>
@@ -841,7 +841,7 @@
                             <input type="checkbox" id="bd_click5277" name="board">
                             <div class="fl">5277</div>
                             <div class="fl board_title left"><label for="bd_click5277">2022년 경기도 노동복지기금 지원사업 공고 및 알림</label></div>
-                            <div class="fl"><img src="css/image/ico_hwp.gif" alt="한글 파일 파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_hwp.gif" alt="한글 파일 파일 첨부있음"></div>
                             <div class="fl board_style2">일자리경제과</div>
                             <div class="fl board_style2">2022.02.14</div>
                             <div class="fl">99</div>
@@ -857,7 +857,7 @@
                             <input type="checkbox" id="bd_click5276" name="board">
                             <div class="fl">5276</div>
                             <div class="fl board_title left"><label for="bd_click5276">일반관리군 재택치료자 전화상담 처방 가능 의료기관 안내</label></div>
-                            <div class="fl"><img src="css/image/ico_xlsx.gif" alt="엑셀 파일 파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_xlsx.gif" alt="엑셀 파일 파일 첨부있음"></div>
                             <div class="fl board_style2">보건정책과</div>
                             <div class="fl board_style2">2022.02.14</div>
                             <div class="fl">82</div>
@@ -874,14 +874,14 @@
                             <input type="checkbox" id="bd_click5275" name="board">
                             <div class="fl">5275</div>
                             <div class="fl board_title left"><label for="bd_click5275">2022년 『경기도 아빠하이!』 남성육아네트워크 참여자 모집 공고</label></div>
-                            <div class="fl"><img src="css/image/ico_folder.gif" alt=" 여러파일 파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_folder.gif" alt=" 여러파일 파일 첨부있음"></div>
                             <div class="fl board_style2">정책기획관</div>
                             <div class="fl board_style2">2022.02.14</div>
                             <div class="fl">81</div>
                             <div class="board_content_wrap">
                                 <div class="board_content_sub">2022년 『경기도 아빠하이!』 남성육아네트워크 참여자 모집 공고</div>
                                 <div class="board_content">
-                                    <p class="p_centerstyle"><img src="css/image/fatherhi_webbanner.jpg" alt="경기도 남성양육자들을 위한 활기찬 육아 네트워크 경기도 아빠하이!"></p>
+                                    <p class="p_centerstyle"><img src="image/fatherhi_webbanner.jpg" alt="경기도 남성양육자들을 위한 활기찬 육아 네트워크 경기도 아빠하이!"></p>
                                     <p class="p_style">경기도에서는 가족구성원간의 육아부담 완화 및 남성의 육아참여 사회환경 조성을 위해 2020년부터 아빠들의 육아활동 및 육아모임을 지원하는 경기도 아빠하이! 사업을 추진하고 있습니다.</p>
                                     <p class="p_style">이에 따라, 2022년 경기도 아빠하이 참여자를 모집하고자 하오니 하남시에 거주하는 아빠들의 적극적인 참여를 바랍니다!</p>
                                     <p>○ 사업명: 경기도 아빠하이!</p>
@@ -897,7 +897,7 @@
                             <input type="checkbox" id="bd_click5274" name="board">
                             <div class="fl">5274</div>
                             <div class="fl board_title left"><label for="bd_click5274">2차 소기업 소상공인 방역물품 지원 사업 안내</label></div>
-                            <div class="fl"><img src="css/image/ico_hwp.gif" alt=" 한글 파일 파일 첨부있음"></div>
+                            <div class="fl"><img src="image/ico_hwp.gif" alt=" 한글 파일 파일 첨부있음"></div>
                             <div class="fl board_style2">일자리경제과</div>
                             <div class="fl board_style2">2022.02.14</div>
                             <div class="fl">298</div>
@@ -1023,14 +1023,14 @@
             </div>
             <div class="footer_info">
                 <div class="inner cf">
-                    <div class="footer_logo fl"><img src="css/image/footer_logo.png" alt="하남시"></div>
+                    <div class="footer_logo fl"><img src="image/footer_logo.png" alt="하남시"></div>
                     <div class="info_box fl">
                         <address><span>우)12951 경기도 하남시 대청로 10 (신장동) 하남시청 TEL : 031-790-6114 / FAX : 031-790-6399</span></address>
                         <p>Copyright (c) 2021 HANAM CITY. All rights Reserved.</p>
                     </div>
                     <div class="validity fr">
-                        <a href="#" title="국가상징알아보기 : 새창" target="_blank"><img src="css/image/taegugki.jpg" alt="국가상징알아보기"></a>
-                        <a href="#" title="국가 공인 인증기관 : 웹와치 새창" target="_blank"><img src="css/image/wa_mark.png" alt="과학기술정보통신부 WEB ACCESSIBILITY 마크(웹 접근성 품질인증 마크)"></a>
+                        <a href="#" title="국가상징알아보기 : 새창" target="_blank"><img src="image/taegugki.jpg" alt="국가상징알아보기"></a>
+                        <a href="#" title="국가 공인 인증기관 : 웹와치 새창" target="_blank"><img src="image/wa_mark.png" alt="과학기술정보통신부 WEB ACCESSIBILITY 마크(웹 접근성 품질인증 마크)"></a>
                     </div>
                 </div>
             </div>
