슬라이더 플러그인 적용

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
 <body>
     <div id="wrap">
@@ -628,34 +629,66 @@
                                 </div>
                                 <div class="main_notice_pagecount fl">
                                     <span class="present_page">1</span> / <span class="total_page">7</span>
-                                    <button class="main_notice_prev">이전</button>
-                                    <button class="main_notice_next">다음</button>
                                 </div>
                                 <a href="board.html" class="noticemore_btn fl">더보기</a>
                             </div>
                             <div class="main_notice_contents">
                                 <div class="main_notice_content main_notice_01 cf">
-                                    <a href="board.html" class="main_notice_card fl">
-                                        <span class="notice_card_tag">#하남소식</span>
-                                        <span class="notice_card_subject">일반관리군 재택치료자 전화상담·처방 가능 의료기관 안내</span>
-                                        <span class="notice_card_content">○ 일반관리군 재택치료자 중 발열 등 증상이 있는 경우, 전화상담 및 처방 가능한 의료기관을 안내드립니다.</span>
-                                        <span class="notice_card_date">2022-02-26</span>
-                                        <span class="new_article"></span>
-                                    </a>
-                                    <a href="board.html" class="main_notice_card fl">
-                                        <span class="notice_card_tag">#하남소식</span>
-                                        <span class="notice_card_subject">하남시립합창단 단원 공개채용 서류평가 합격자 결정 및 실기·면접평가 계획 공고</span>
-                                        <span class="notice_card_content">하남시립합창단 단원(비상임) 공개채용 서류평가 합격자 결정 및 실기·면접평가 계획 등에 관한 사항을 다음과 </span>
-                                        <span class="notice_card_date">2022-02-25</span>
-                                        <span class="new_article"></span>
-                                    </a>
-                                    <a href="board.html" class="main_notice_card fl">
-                                        <span class="notice_card_tag">#하남소식</span>
-                                        <span class="notice_card_subject">호흡기 진료 지정 의료기관(코로나19 신속항원키트 및 PCR검사 가능) 알림</span>
-                                        <span class="notice_card_content">* '22.02.24. 기준 호흡기 진료 지정 의료기관(코로나19 신속항원키트 및 PCR검사 가능)을 알려드</span>
-                                        <span class="notice_card_date">2022-02-25</span>
-                                        <span class="new_article"></span>
-                                    </a>
+                                    <div class="main_notice_box fl">
+                                        <a href="board.html" class="main_notice_card">
+                                            <span class="notice_card_tag">#하남소식</span>
+                                            <span class="notice_card_subject">사회적 거리두기 조정에 따른 체육시설 방역수칙 안내</span>
+                                            <span class="notice_card_content">사회적 거리두기 조정에 따른 방역수칙을 다음과 같이 안내드립니다. 
+
+                                                □ 적용기간 : 2022년 3월 2</span>
+                                            <span class="notice_card_date">2022-03-18</span>
+                                            <span class="new_article"></span>
+                                        </a>
+                                    </div>
+                                    <div class="main_notice_box fl">
+                                        <a href="board.html" class="main_notice_card">
+                                            <span class="notice_card_tag">#하남소식</span>
+                                            <span class="notice_card_subject">호흡기 진료 지정 의료기관(코로나19 신속항원검사 및 PCR검사 가능) 알림</span>
+                                            <span class="notice_card_content">.</span>
+                                            <span class="notice_card_date">2022-03-18</span>
+                                            <span class="new_article"></span>
+                                        </a>
+                                    </div>
+                                    <div class="main_notice_box fl">
+                                        <a href="board.html" class="main_notice_card">
+                                            <span class="notice_card_tag">#하남소식</span>
+                                            <span class="notice_card_subject">2022년 여성청소년 기본생리용품 보편지원 신청 안내</span>
+                                            <span class="notice_card_content">2022년 여성청소년 기본생리용품 보편지원 신청 안내입니다.
+
+                                                ○ 지원대상 : 신청기준일(2022년1월1</span>
+                                            <span class="notice_card_date">2022-03-16</span>
+                                            <span class="new_article"></span>
+                                        </a>
+                                    </div>
+                                    <div class="main_notice_box fl">
+                                        <a href="board.html" class="main_notice_card">
+                                            <span class="notice_card_tag">#하남소식</span>
+                                            <span class="notice_card_subject">일반관리군 재택치료자 전화상담·처방 가능 의료기관 안내</span>
+                                            <span class="notice_card_content">○ 일반관리군 재택치료자 중 발열 등 증상이 있는 경우, 전화상담 및 처방 가능한 의료기관을 안내드립니다.</span>
+                                            <span class="notice_card_date">2022-02-26</span>
+                                        </a>
+                                    </div>
+                                    <div class="main_notice_box fl">
+                                        <a href="board.html" class="main_notice_card">
+                                            <span class="notice_card_tag">#하남소식</span>
+                                            <span class="notice_card_subject">하남시립합창단 단원 공개채용 서류평가 합격자 결정 및 실기·면접평가 계획 공고</span>
+                                            <span class="notice_card_content">하남시립합창단 단원(비상임) 공개채용 서류평가 합격자 결정 및 실기·면접평가 계획 등에 관한 사항을 다음과 </span>
+                                            <span class="notice_card_date">2022-02-25</span>
+                                        </a>
+                                    </div>
+                                    <div class="main_notice_box fl">
+                                        <a href="board.html" class="main_notice_card">
+                                            <span class="notice_card_tag">#하남소식</span>
+                                            <span class="notice_card_subject">호흡기 진료 지정 의료기관(코로나19 신속항원키트 및 PCR검사 가능) 알림</span>
+                                            <span class="notice_card_content">* '22.02.24. 기준 호흡기 진료 지정 의료기관(코로나19 신속항원키트 및 PCR검사 가능)을 알려드</span>
+                                            <span class="notice_card_date">2022-02-25</span>
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="main_notice_content main_notice_02 cf">
                                     <a href="#" class="main_notice_card fl">
@@ -957,6 +990,8 @@
             </a>
         </div>
     </div>
+    <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
